--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@
     line-height: 40px;
     font-weight: 100;
     font-size: 14px;
-    cursor: help;
+    cursor: pointer;
     transform: scale(0, 0);
     transition: transform 0.3s;
 }
@@ -35,6 +35,11 @@
 .point.visible .label
 {
     transform: scale(1, 1);
+}
+
+.point:hover .label
+{
+    transform: scale(1.25);
 }
 
 
