--- a/src/style.css
+++ b/src/style.css
@@ -68,3 +68,120 @@
     opacity: 1;
 }
 
+
+
+.container {
+width: 100%;
+height: 100vh;
+display: grid;
+grid-template-areas:
+    "header header header header header"
+    "content content content content content"
+    "content content content content content"
+    "content content content content content"
+    "footer footer footer footer footer";
+grid-template-columns: auto auto auto auto auto;
+grid-template-rows: 125px auto;
+}
+
+.header {
+background-color: #252525;
+width: 100%;
+grid-area: header;
+height: 125px;
+position: fixed;
+z-index: 1;
+box-shadow: 2px 2px 10px black;
+padding: 15px 0px;
+}
+
+.header-container {
+width: 100%;
+height: 100%;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+align-items: center;
+}
+
+.header-container-logo-img {
+width: 100px;
+height: 100%;
+}
+
+.header-subcontainer-logo-img {
+width: 100%;
+height: 100%;
+}
+
+.header-subcontainer-logo-img > a > img {
+height: 100%;
+}
+
+.header-container-links {
+display: flex;
+flex-wrap: wrap;
+}
+
+.header-container-link-shop {
+display: flex;
+column-gap: 50px;
+}
+
+.header-container-link {
+color: white;
+text-decoration: none;
+padding: 13px;
+border-radius: 10px;
+font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+transition: 0.8s;
+text-shadow: 2px 2px 10px black;
+display: flex;
+column-gap: 8px;
+align-items: center;
+}
+
+.header-container-link:hover {
+color: black;
+}
+
+.header-container-searchBar-subcontainer {
+display: flex;
+flex-direction: row;
+column-gap: 20px;
+height: max-content;
+}
+
+.header-container-searchBar-subcontainer-textInput {
+display: none;
+width: 0%;
+}
+
+.header-container-searchBar-subcontainer-icon {
+display: flex;
+align-items: center;
+cursor: pointer;
+transition: 0.5s;
+}
+
+.header-container-searchBar-subcontainer-icon:hover {
+transform: scale(1.15);
+}
+
+.searchBar-textInput {
+background-color: #343436;
+border-width: 0;
+border-top-left-radius: 10px;
+border-top-right-radius: 10px;
+border-bottom: 2px solid #070707;
+padding: 10px;
+color: white;
+transition: 0.5s;
+width: 0%;
+}
+
+.searchBar-textInput:focus {
+outline: none;
+background-color: #66666b;
+border-bottom: none;
+}
