--- a/src/style.css
+++ b/src/style.css
@@ -185,3 +185,67 @@ outline: none;
 background-color: #66666b;
 border-bottom: none;
 }
+
+
+
+.main-container {
+grid-area: content;
+height: auto;
+}
+
+.main-body-container {
+width: auto;
+height: 100%;
+}
+
+.main-body-section {
+width: auto;
+height: 100vh;
+box-shadow: 2px 2px 10px black;
+}
+
+#main-body-sections:first-child {
+background-color: #5D5E62;
+}
+
+#main-body-sections {
+background-color: rgb(37, 37, 37);
+}
+
+.main-body-first-section {
+display: flex;
+flex-wrap: wrap;
+background-image: url("/GIFs/shoe ad.gif");
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+width: 100%;
+height: 100%;
+}
+
+.main-body-first-section-text-subcontent {
+background-color: rgba(0, 0, 0, 0.5);
+-webkit-backdrop-filter: blur(10px);
+backdrop-filter: blur(10px);
+width: 100%;
+height: 100%;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
+
+.main-body-first-section-title-text {
+color: whitesmoke; 
+padding: 30px;
+font-size: 80px;
+font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+.bottomBorderTitleLine, .topBorderTitleLine {
+position: relative; 
+width: 0; 
+height: 10px; 
+background-color: white;
+}
