--- a/src/style.css
+++ b/src/style.css
@@ -305,6 +305,10 @@ align-items: center;
     background-color: #6A878C;
 }
 
+.slide-4 {
+    background-color: #b4b2a4;
+}
+
 .canvas-model-renderer {
     width: 100%;
     height: 100%;
