--- a/src/style.css
+++ b/src/style.css
@@ -325,7 +325,20 @@ margin: 30px 0px;
 display: flex;
 column-gap: 15px;
 width: 90%;
-justify-content: flex-end;
+justify-content: space-between;
+align-items: center;
+}
+
+.tendency-title > h2 {
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    color: whitesmoke;
+    text-shadow: 10px 10px 15px black;
+}
+
+.carousel-btns {
+    display: flex;
+    column-gap: 10px;
 }
 
 .carousel-btn {
