--- a/src/style.css
+++ b/src/style.css
@@ -273,7 +273,20 @@ justify-content: center;
 align-items: center;
 }
 
-.slider {
+.slide-wrapper {
+    height: 100%; 
+    width: 90%; 
+    display: flex;
+}
+
+.slide-canvas-wrapper {
+    width: 100%; 
+    display: flex; 
+    padding: 60px 0px; 
+    column-gap: 45px;
+}
+
+.slider, .slider-iconic {
 width: 100%;
 height: 100vh;
 position: relative;
@@ -281,7 +294,11 @@ overflow: hidden;
 margin-bottom: 30px;
 }
 
-.slide {
+.slide-iconic {
+    background-color: #1d1d1d;
+}
+
+.slide, .slide-iconic {
 width: 100%;
 height: 100%;
 position: absolute;
@@ -291,6 +308,34 @@ color: white;
 display: flex;
 justify-content: center;
 align-items: center;
+}
+
+.canvas-container {
+    position: relative; 
+    width: 100%; 
+    height: 100%; 
+    display: flex; 
+    align-items: flex-end;
+}
+
+.canvas-button-container {
+    position: relative; 
+    color: white; 
+    padding: 20px;
+}
+
+.canvas-button {
+    background-color: rgb(150, 150, 150); 
+    border: 1px solid rgb(150, 150, 150); 
+    padding: 10px 20px; 
+    border-radius: 30px; 
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.canvas-button:hover {
+    background-color: rgb(125, 125, 125); 
+    border: 1px solid rgb(125, 125, 125); 
 }
 
 .slide-1 {
