--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ background-color: rgb(37, 37, 37);
 .main-body-first-section {
 display: flex;
 flex-wrap: wrap;
-background-image: url("./GIFs/shoe\ ad.gif");
+background-image: url("./GIFs/shoe ad.gif");
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
